# mwague

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  post_create_command.sh
.github/: README.md
ansible/: deploy-to-node.yaml  pgbackrest.conf
assets/: README.md
backend/: README.md  alembic.ini  main copy.py  main.py  requirements.txt  requirements_worker.txt
bdd/: .env.local  Dockerfile  openapi.json  pyproject.toml  run.sh
bdd/bdd/: behave.init
bdd/bdd/features/: environment.py  organization.feature
bdd/bdd/features/steps/: background.py  organization.py
bdd/bdd/tools/: oidc.py  types.py
bdd/tests/: behave.ini
bdd/tests/features/: deposit.feature  deposit.update.feature  deposit_no_activity.feature  environment.py  external.feature  init.feature  internal.feature  internal_no_activity.feature  organization.feature  sending.feature
bdd/tests/features/steps/: common_steps.py  deposit.py  external.py  init.py  internal.py  organization.py  sending.py
bdd/tests/tools/: config.py  database.py  oidc.py  utils.py
compose/: .env.backend  HealthCheck.java  compose.auth.yml  compose.ci.yml  compose.common.yml  compose.yml  export.sh  runcitests.sh  start.sh
data/: README.md
docker/: Dockerfile.backend  Dockerfile.backend-worker  Dockerfile.website  README.md
docs/: README.md
mkdi-shared/: pyproject.toml
mkdi-shared/mkdi_shared/: api_client.py  utils.py
mkdi-shared/mkdi_shared/exceptions/: mkdi_api_error.py
mkdi-shared/mkdi_shared/money/: Money.py
mkdi-shared/mkdi_shared/schemas/: protocol.py
mkdi-shared/tests/: test_mkdi_api_client.py
(+702 files in other folders)
